@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2023-07-02T08:15:32Z",
-  "count_outdated" : 123,
-  "uniques_outdated" : 104,
+  "timestamp" : "2023-07-04T08:17:04Z",
+  "count_outdated" : 124,
+  "uniques_outdated" : 105,
   "count" : 129,
   "uniques" : 109,
   "clones" : [
-    {
-      "timestamp": "2023-06-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2023-06-21T00:00:00Z",
       "count": 1,
