@@ -1,3 +1,12 @@
+2023-07-04T08:17:04Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/5452406880 # 959
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&until=2023-07-05
+* notice: last 14d: unq all: 3 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 104 123 / 109 129
+* notice: next accum: outdated-unq outdated-all / unq all: 105 124 / 109 129
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2023-06-20] / []
+
 2022-12-07T16:00:35Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3640585236 # 682
 * notice: last 14d: unq all: 2 3
